Update generated wasm app for version 0.1.0

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <a class="dismiss">✗</a>
     </div>
     <script src="decode.js"></script>
-    <script src="_framework/blazor.webassembly.js"></script>
+    <script src="_framework/blazor.webassembly.js" autostart="false"></script>
     <script src="_content/MudBlazor/MudBlazor.min.js"></script>
     <script>
         Blazor.start({
